--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 
 :root {
     --text-main: #171717;
-    --bg-main: #EEF6FF;
+    --bg-main: #f2f1ec;
     --bg-muted: #eae9e1;
     --border-main: #171717;
 }
